--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - NODE_ENV=development
       - MONGO_USER=root
       - MONGO_PASSWORD=example
+      - SESSION_SECRET=secret
     volumes:
       - /app/node_modules # 这个文件容器它自己的
       - ./:/app
@@ -27,6 +28,10 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
       - mongo-db:/data/db
+
+  redis:
+    image: redis
+    restart: always
 
 # 让docker来管理volumes而不是手动指定一个目录, 尚不明确这么做的好处是什么.
 volumes:
