--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,19 @@
 version: "3"
 services:
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - 3000:80
+    volumes: 
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+
   node-app:
     build:
       context: .
       args:
         NODE_ENV: development
-    ports:
-      - 3000:3000
+    # ports:
+    #   - 3000:3000
     environment:
       - PORT=3000
       - NODE_ENV=development
