--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,16 +1,44 @@
 version: "3"
 services:
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - 3000:80
+    volumes: 
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+
   node-app:
     build:
       context: .
       args:
         NODE_ENV: development
-    ports:
-      - 3000:3000
+    # ports:
+    #   - 3000:3000
     environment:
       - PORT=3000
       - NODE_ENV=development
+      - MONGO_USER=root
+      - MONGO_PASSWORD=example
+      - SESSION_SECRET=secret
     volumes:
-      - ./:/app
       - /app/node_modules # 这个文件容器它自己的
+      - ./:/app
     command: npm run dev # 覆盖Dockerfile中的指令
+    depends_on: 
+      - mongo
+
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=example
+    volumes:
+      - mongo-db:/data/db
+
+  redis:
+    image: redis
+    restart: always
+
+volumes:
+  mongo-db:
