--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - 3000:80
+      - 80:80
     volumes: 
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
 
@@ -11,28 +11,23 @@ services:
     build:
       context: .
       args:
-        NODE_ENV: development
-    # ports:
-    #   - 3000:3000
+        NODE_ENV: production
     environment:
       - PORT=3000
-      - NODE_ENV=development
-      - MONGO_USER=root
-      - MONGO_PASSWORD=example
-      - SESSION_SECRET=secret
-    volumes:
-      - /app/node_modules # 这个文件容器它自己的
-      - ./:/app
-    command: npm run dev # 覆盖Dockerfile中的指令
-    depends_on: 
+      - NODE_ENV=production
+      - MONGO_USER=${MONGO_USER}
+      - MONGO_PASSWORD=${MONGO_PASSWORD}
+      - SESSION_SECRET=${SESSION_SECRET}
+    command: node index.js
+    depends_on:
       - mongo
 
   mongo:
     image: mongo
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     volumes:
       - mongo-db:/data/db
 
@@ -40,6 +35,5 @@ services:
     image: redis
     restart: always
 
-# 让docker来管理volumes而不是手动指定一个目录, 尚不明确这么做的好处是什么.
 volumes:
   mongo-db:
