--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,16 @@ services:
       context: .
       args:
         NODE_ENV: production
+    image: arnosolo/node-app
     environment:
       - PORT=3000
       - NODE_ENV=production
       - MONGO_USER=${MONGO_USER}
       - MONGO_PASSWORD=${MONGO_PASSWORD}
       - SESSION_SECRET=${SESSION_SECRET}
+      # - MONGO_USER=root
+      # - MONGO_PASSWORD=example
+      # - SESSION_SECRET=secret
     command: node index.js
     depends_on:
       - mongo
@@ -28,6 +32,8 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      # - MONGO_INITDB_ROOT_USERNAME=root
+      # - MONGO_INITDB_ROOT_PASSWORD=secret
     volumes:
       - mongo-db:/data/db
 
