--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: "3"
 services:
+  # watchtower:
+  #   image: containrrr/watchtower 
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock
+
   nginx:
     image: nginx:stable-alpine
     ports:
@@ -8,6 +13,15 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
 
   node-app:
+    deply:
+      replicas: 4
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      update_config:
+        parallelism: 2
+        delay: 15s
     build:
       context: .
       args:
