--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
 
   node-app:
-    deply:
+    deploy:
       replicas: 4
       restart_policy:
         condition: on-failure
